--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-website",
+  "name": "enclava-docs",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -43,5 +43,8 @@
   },
   "engines": {
     "node": ">=18.0"
+  },
+  "overrides": {
+    "webpack-dev-server": "^5.2.1"
   }
 }
